@startuml

title __CONTROLLER's Class Diagram__\n

  namespace Runner {
    class Runner.Runner {
        ~ continentName : String
        ~ countryName : String
        ~ editPlayerFinished : boolean
        ~ mapFile : String
        ~ neighborCountryName : String
        ~ playerName : String
        {static} + main()
        ~ checkValidityOfTasksList()
        ~ cmdController()
        ~ getCommand()
    }
  }
  

  namespace Runner {
    class Runner.ExtractedTasks {
        + taskData : ArrayList<String>
        + ExtractedTasks()
    }
  }
  

  namespace Runner {
    enum tasksEnum {
      addcontinent
      addcountry
      addneighbor
      addplayer
      alloutattack
      editmap
      exchangecards
      fortify
      ignoreattack
      ignoreexchangecards
      ignorefortify
      loadmap
      normalattack
      placeall
      placearmy
      populatecountries
      reinforce
      removecontinent
      removecountry
      removeneighbor
      removeplayer
      savemap
      showmap
      unknown
      validatemap
    }
  }
  

  Runner.Runner o-- Runner.tasksEnum : currentTask
  Runner.Runner o-- GameLogic.GamePlay : gamePlayObj
  Runner.ExtractedTasks o-- Runner.tasksEnum : name


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
